fixed buildng diarc exp

--- a/build.properties
+++ b/build.properties
@@ -42,6 +42,9 @@ src.genlex.ccg.unification = genlex.ccg.unification/src
 src.spfdist = spfdist/src
 src.geoquery=geoquery/src
 geoquery=geoquery
+src.diarclex=diarclex/src
+diarclex=diarclex
 spfbase=spfbase
 mainclass=edu.cornell.cs.nlp.spf.utils.main.Main
+diarcmain=edu.cornell.cs.nlp.spf.utils.main.DiarcMain
 version=2.0
