work on adding proper conjunctions and push to master

--- a/build.properties
+++ b/build.properties
@@ -46,5 +46,5 @@ src.diarclex=diarclex/src
 diarclex=diarclex
 spfbase=spfbase
 mainclass=edu.cornell.cs.nlp.spf.utils.main.Main
-diarcmain=edu.cornell.cs.nlp.spf.utils.main.DiarcMain
+diarcmain=edu.cornell.cs.nlp.spf.utils.main.DMain
 version=2.0
